--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -2,10 +2,8 @@
 # Make sure to check the documentation at https://goreleaser.com
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod tidy
-    # you may remove this if you don't need go generate
-    # - go generate ./...
+
 builds:
   - 
     env:
@@ -31,3 +29,5 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
+universal_binaries:
+- replace: true
